<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroiddetailviewmodel"
            type="com.phalder.nasa.asteroid.asteroiddetail.AsteroidDetailViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".asteroiddetail.AsteroidDetailFragment">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_view_height"
                app:asteroidImage="@{asteroiddetailviewmodel.asteroid}"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/close_app_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_medium"
                android:layout_marginTop="@dimen/margin_top_large"
                android:text="@string/close_approach_date_title"
                style="@style/TextAppearance.Header2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/close_app_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_small"
                android:text="@{asteroiddetailviewmodel.asteroid.closeApproachDate}"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/close_app_date_title"
                app:layout_constraintTop_toBottomOf="@+id/close_app_date_title"
                tools:text="2020-12-09" />

            <TextView
                android:id="@+id/abs_mag_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_large"
                android:text="@string/absolute_magnitude"
                style="@style/TextAppearance.Header2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/close_app_date_value"
                app:layout_constraintTop_toBottomOf="@+id/close_app_date_value" />

            <TextView
                android:id="@+id/abs_mag_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_small"
                android:text="@{asteroiddetailviewmodel.absmagnitudeString}"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/abs_mag_title"
                app:layout_constraintTop_toBottomOf="@+id/abs_mag_title"
                tools:text="19.90000000 au" />

            <ImageView
                android:id="@+id/more_info_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/margin_top_large"
                android:clickable="true"
                android:src="@drawable/ic_help_circle"
                app:layout_constraintBottom_toBottomOf="@+id/abs_mag_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/abs_mag_title"
                app:layout_constraintTop_toTopOf="@+id/abs_mag_title"
                app:layout_constraintVertical_bias="0.523" />

            <TextView
                android:id="@+id/est_diameter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_large"
                android:text="@string/estimated_diameter"
                style="@style/TextAppearance.Header2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/abs_mag_value"
                app:layout_constraintTop_toBottomOf="@+id/abs_mag_value" />

            <TextView
                android:id="@+id/est_diameter_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_small"
                android:text="@{asteroiddetailviewmodel.estdiameterStr}"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/est_diameter_title"
                app:layout_constraintTop_toBottomOf="@+id/est_diameter_title"
                tools:text="0.62223456 km" />

            <TextView
                android:id="@+id/relative_velocity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_large"
                android:text="@string/relative_velocity"
                style="@style/TextAppearance.Header2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/est_diameter_value"
                app:layout_constraintTop_toBottomOf="@+id/est_diameter_value" />

            <TextView
                android:id="@+id/relative_velocity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_small"
                android:text="@{asteroiddetailviewmodel.relativeVelocityStr}"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/relative_velocity_title"
                app:layout_constraintTop_toBottomOf="@+id/relative_velocity_title"
                tools:text="15.55657 km/s" />

            <TextView
                android:id="@+id/distance_from_earth_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_large"
                android:text="@string/distance_from_earth"
                style="@style/TextAppearance.Header2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/relative_velocity_value"
                app:layout_constraintTop_toBottomOf="@+id/relative_velocity_value" />

            <TextView
                android:id="@+id/distance_from_earth_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_small"
                android:text="@{asteroiddetailviewmodel.distanceFromEarthStr}"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/distance_from_earth_title"
                app:layout_constraintTop_toBottomOf="@+id/distance_from_earth_title"
                tools:text="0.445678 au" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>